--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>we</title>
+    <link href="https://cdn.bootcss.com/element-ui/2.8.2/theme-chalk/index.css" rel="stylesheet">
+    <title>墨盒相册</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.bootcss.com/element-ui/2.8.2/index.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/element-ui/2.8.2/index.js"></script> -->
     <!-- built files will be auto injected -->
+    
   </body>
 </html>
