--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/element-ui/2.8.2/index.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/element-ui/2.8.2/index.js"></script> -->
+    <script src="https://cdn.bootcss.com/vue-router/3.0.6/vue-router.min.js"></script>
     <!-- built files will be auto injected -->
     
   </body>
