--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://cdn.bootcss.com/element-ui/2.15.5/theme-chalk/index.css" rel="stylesheet">
+  <link rel="icon" href="/static/favicon.ico">
   <title>墨明棋妙</title>
 </head>
 
