--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link href="https://cdn.bootcss.com/element-ui/2.15.5/theme-chalk/index.css" rel="stylesheet">
+  <!-- <link href="https://cdn.bootcss.com/element-ui/2.15.14/theme-chalk/index.css" rel="stylesheet"> -->
   <link rel="icon" href="/static/favicon.ico">
   <title>墨明棋妙</title>
 </head>
@@ -16,7 +16,7 @@
   <% } else { %>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <% } %>
-  <script src="https://cdn.bootcss.com/element-ui/2.15.5/index.js"></script>
+  <script src="https://cdn.bootcss.com/element-ui/2.15.14/index.js"></script>
   <script src="https://cdn.bootcss.com/vue-router/3.0.6/vue-router.min.js"></script>
   <!-- built files will be auto injected -->
 
