--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- <link href="https://cdn.bootcss.com/element-ui/2.15.14/theme-chalk/index.css" rel="stylesheet"> -->
-  <link rel="icon" href="/static/favicon.ico">
+  <link rel="icon" href="/favicon.ico">
   <title>墨明棋妙</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <% if(htmlWebpackPlugin.options.env.NODE_ENV == 'production'){ %>
+  <% if(NODE_ENV == 'production'){ %>
   <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
   <% } else { %>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
