--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- <link href="https://cdn.bootcss.com/element-ui/2.15.14/theme-chalk/index.css" rel="stylesheet"> -->
-  <link rel="icon" href="/favicon.ico">
-  <title>墨明棋妙</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <% if(NODE_ENV == 'production'){ %>
-  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-  <% } else { %>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <% } %>
-  <script src="https://cdn.bootcss.com/element-ui/2.15.14/index.js"></script>
-  <script src="https://cdn.bootcss.com/vue-router/3.0.6/vue-router.min.js"></script>
-  <!-- built files will be auto injected -->
-
-</body>
-
+<html lang="" class="dark">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/browse/view-ui-plus@1.3.15/dist/styles/viewuiplus.css"> -->
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <% if(NODE_ENV == 'production'){ %>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/4.2.4/vue-router.global.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/view-ui-plus@1.3.15"></script>
+    <% } %>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
